--- a/Dockerfile.from_base
+++ b/Dockerfile.from_base
@@ -12,7 +12,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-FROM mediapipe_python_cudagl10.1_ubuntu18.04_base
+#FROM mediapipe_python_cudagl10.1_ubuntu18.04_base
+FROM registry.cn-shenzhen.aliyuncs.com/mt_docker/mediapipe_cuda:mediapipe_python_cudagl10.1_ubuntu18.04_base
 
 COPY . /mediapipe/
 
@@ -20,12 +21,16 @@ WORKDIR /mediapipe/
 
 ENV HTTP_PROXY=http://192.168.2.33:1087
 ENV HTTPS_PROXY=http://192.168.2.33:1087
+ENV PATH=/usr/local/cuda/bin${PATH:+:${PATH}}
+ENV LD_LIBRARY_PATH=/usr/local/cuda/lib64${LD_LIBRARY_PATH:+:${LD_LIBRARY_PATH}}
+ENV TF_CUDA_PATHS=/usr/local/cuda,/usr/lib/x86_64-linux-gnu,/usr/include
+RUN ldconfig
 
 RUN rm -rf /mediapipe/mediapipe/examples/ && \
     pip3 install -r requirements.txt && \
-    python setup.py build --link-opencv && \
+    python setup.py build && \
     python setup.py gen_protos && \
-    python setup.py install --link-opencv && \
+    python setup.py install && \
     rm -rf /root/.cache && \
     rm -rf /mediapipe/
 
